--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
-
-<p>
-Hello, World!
-</p>
-
-<a href="secret.html">secret</a>
+<html>
+  <head>
+    <title>XavierCyber</title>
+  </head>
+  <body>
+    <p>
+      Hello, World!
+    </p>
+    <a href="secret.html">secret</a>
+  </body>
+</html>
