--- a/index.html
+++ b/index.html
@@ -9,4 +9,12 @@
     </p>
     <a href="secret.html">secret</a>
   </body>
+  
+  
+  <style>
+   p {
+     color: red;
+  }
+  </style>
+  
 </html>
