--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
             <img id="mobile-cta" class="menu-nav" src="/assets/menu-icon.svg" alt="Navigation Menu" width=40 height=40>
 
-            <nav>
+            <nav id="nav-sub-menu">
                 <img id="menu-exit" class="menu-exit" src="assets/menu-exit.svg" alt="Close Navigation" width=25 height=25>
                 <ul class="primary-nav">
                     <li class="current"><a href="#">Home</a></li>
                     <li><a href="#">About Me</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Games</a></li>
-                    <li class="contact"><a href="#">Games Development</a></li>
+                    <li class="contact"><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -116,9 +116,24 @@
         </div>
     </section>
 
-
     <section class="credits">
         <p class="design">Designed by Xavier Elwell.<br>Images by @vishnu-mohanan</p>
     </section>
+
+    <script>
+        const mobileNav = document.getElementById("mobile-cta");
+        nav = document.getElementById("nav-sub-menu");
+        menuExit = document.getElementById("menu-exit");
+        mobileNav.addEventListener("click", () => {
+            nav.style.display="block";
+        });
+        menuExit.addEventListener("click", () => {
+            nav.style.display="none";
+            console.log("hi")
+        });
+
+    </script>
+
+
 </body>
 </html>
